[gd_scene load_steps=10 format=3 uid="uid://bwp5cwf3sagjn"]

[ext_resource type="Script" path="res://player.gd" id="1_0yvix"]
[ext_resource type="Texture2D" uid="uid://do7ltbgvbl77d" path="res://assets/player_raw_sheet.png" id="2_s2vxc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_872f3"]
radius = 21.0
height = 76.0

[sub_resource type="Animation" id="Animation_vwv28"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [37]
}

[sub_resource type="Animation" id="Animation_dtkhe"]
resource_name = "dodge"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [47, 48]
}

[sub_resource type="Animation" id="Animation_yt5t5"]
resource_name = "fall_down"
length = 0.20001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [28, 29]
}

[sub_resource type="Animation" id="Animation_qw47y"]
resource_name = "idle"
length = 0.40001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [33, 34, 35, 36]
}

[sub_resource type="Animation" id="Animation_jvetn"]
resource_name = "jump_up"
length = 0.40001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [37, 38, 39, 40]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_prrrd"]
_data = {
"RESET": SubResource("Animation_vwv28"),
"dodge": SubResource("Animation_dtkhe"),
"fall_down": SubResource("Animation_yt5t5"),
"idle": SubResource("Animation_qw47y"),
"jump_up": SubResource("Animation_jvetn")
}

[node name="Player" type="Node2D"]
script = ExtResource("1_0yvix")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("2_s2vxc")
hframes = 56
frame = 37
region_rect = Rect2(14, 7, 19, 29)

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(0, 14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_872f3")

[node name="DodgeTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_prrrd")
}
autoplay = "idle"
speed_scale = 0.5

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="DodgeTimer" to="." method="_on_dodge_timer_timeout"]
